# PCALib

./: README.md  environment.yml  pyproject.toml  run.sh  setup.sh
Code/figures/fig2_synthetic_data/: pcalib_synthetic_inference.ipynb  plot_the_figure_2.py  run_the_inference.py
Code/figures/fig2_synthetic_data/cached_results/: bar_x_40_trials.npy  empirical_rho_40_trials.npy  epsilon_animals.npy  epsilon_trials.npy  inferred_v_i_40_trials.npy  inferred_y_40_trials.npy  many_animals_potential.npz  many_trials_potential.npz  n_trials_array.npy  predicted_rho_40_trials.npy  rho_animals.npy  rho_trials.npy  signal_variability_animals.npy  sqrt_mean_sigma_squared.npy  true_mean_noise_variance.npy  true_signal_variability.npy
Code/figures/fig3_synthetic_data/: plot_the_figure_3.py  run_the_inference.py
Code/figures/fig3_synthetic_data/cached_results/: bar_x_true.npy  epsilon_emp_mean.npy  epsilon_emp_std.npy  epsilon_pred.npy  epsilon_pred_attempts.npy  epsilon_ref.npy  epsilon_theory_mean.npy  epsilon_theory_std.npy  inferred_y_5.npy  inferred_y_50.npy  n_trials_array.npy  potential_true.npz  rho_emp_mean.npy  rho_emp_per_neuron_PCA50_attempts.npy  rho_emp_per_neuron_PCA50_mean.npy  rho_emp_std.npy  (+15 more)
Code/figures/fig_456_real_data/: plot_the_figure.py  run_the_inference.py
Code/pcalib/: __init__.py  classes.py  functions.py  utils.py
Data/1 Gallego-Carracedo et al/: G.npy  preformat_data.py  preformatted_data.npy
Data/2 Li et al (Svoboda lab)/: G.npy  preprocess_data.py
Data/3 Chillale et al (Boubenec)/: G.npy  preformatted_data_Timanoix.npy  preprocess_data.py
(+125 files in other folders)
