[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcalib"
version = "0.1.0"
description = "PCalib utilities and figure pipelines"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "Code"}
packages = ["pcalib"]